<resources>
    <string name="app_name">ChedliWeldi</string>

    <string name="title_activity_sign_up">SignUp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Chedli Weldi!</string>
    <string name="slide_1_desc">The easiest way to find babysitters in the area!</string>

    <string name="slide_2_title">Safe !</string>
    <string name="slide_2_desc">Our babysitter are all trained well and bla bla </string>

    <string name="slide_3_title">Great People</string>
    <string name="slide_3_desc">bla bla bla bla bla bla bla whatever!</string>

    <string name="slide_4_title">World Babysitters</string>
    <string name="slide_4_desc">Chedli Weldi is a great way to find babysitting jobs nearby !</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="tab_title_main_1">Acceuil</string>
    <string name="tab_title_main_2">Map</string>
    <string name="nav_header_text">Chedli weldi</string>
    <string name="navigation_drawer_open">Navigation drawer open</string>
    <string name="navigation_drawer_close">Navigation drawer close</string>

    <string name="main_card_title">Your job post</string>
    <string name="main_card_title_short">Title</string>
    <string name="main_card_subtitle">Subtitle</string>
    <string name="main_card_details">Details about the job</string>

    <string name="main_card_button_1">Modifier</string>
    <string name="main_card_button_2">Annuler</string>
    <string name="title_activity_maps">Map</string>

    <string name="no_account">Dont have an account ? </string>
    <string name="sign_in">Sign In </string>

    <string name="ham_profile">Profile</string>
    <string name="ham_profile_sub">Open profile settings</string>
    <string name="ham_job">Jobs</string>
    <string name="ham_job_sub">Add a new babysitting job</string>
    <string name="ham_ongoing">Ongoing Job</string>
    <string name="ham_ongoing_sub">Check your babysitter and the tasklist</string>
    <!-- TODO: Remove or change this placeholder text -->


    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>

    <string name="title_activity_fullscreen">FullscreenAddJobActivity</string>
    <string name="title_activity_live_card_service">Hello World LiveCard</string>
    <string name="action_stop">Stop</string>
    <string name="hello_world">Hello world!</string>


    <string name="facebook_app_id">320882858414112</string>
    <string name="fb_login_protocol_scheme">fb320882858414112</string>
    <string name="location">Location</string>
    <string name="details">Details</string>
    <string name="hint_enter_a_message">Enter a message</string>

    <string name="title">Choose distance</string>
    <string name="tickStart">Tick Start = 5</string>
    <string name="tickEnd">Tick End = 10</string>
    <string name="tickInterval">Tick Interval = 1</string>
    <string name="tickHeight">Tick Height = 24</string>
    <string name="barWeight">Bar Weight = 2</string>
    <string name="barColor">Bar Color = #CCCCCC</string>
    <string name="connectingLineWeight">Connecting Line Weight = 4</string>
    <string name="connectingLineColor">Connecting Line Color = #3F51B5</string>
    <string name="thumbRadius">Pin Size = 30</string>
    <string name="selectorBoundarySize">Selector Boundary Size = 1</string>
    <string name="selectorBoundaryColor">Selector Boundary Color = #3F51B5</string>
    <string name="thumbColorNormal">Pin Color = #3F51B5</string>
    <string name="selectorColorNormal">Selector Color = #3F51B5</string>
    <string name="tickColorNormal">Tick Color = #000000</string>
    <string name="textColorNormal">Text Color = #ffffff</string>
    <string name="confirmNewColor">New</string>
    <string name="confirmDefaultColor">Default</string>
    <string name="colorPickerTitle">Select a Color</string>
    <string name="resetThumbColors">Reset Thumb Colors</string>
    <string name="leftIndexValue">0</string>
    <string name="leftIndex">Min distance</string>
    <string name="rightIndexValue">100</string>
    <string name="rightIndex">Max distance</string>
    <string name="indexSet">Set By Index</string>
    <string name="valueSet">Set By Value</string>
    <string name="toggle_range">Range/Seek</string>
    <string name="color_picker_default_title">Select a Color</string>
    <string name="color_swatch_description">Color</string>
    <string name="color_swatch_description_selected">Color selected</string>

</resources>
