<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mylayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/green_primary"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <com.appyvet.materialrangebar.RangeBar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rangebar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mrb_pinMaxFont="10sp"
        app:mrb_pinTextColor="#ACD123"
        app:mrb_rangeBarPaddingBottom="20dp"
        app:mrb_selectorBoundaryColor="@color/accent"
        app:mrb_selectorBoundarySize="2dp"
        app:mrb_selectorSize="10dp"
        app:mrb_tickEnd="100"
        app:mrb_tickInterval="1"
        app:mrb_tickStart="1" />

    <include
        layout="@layout/divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/leftIndex"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/leftIndex" />

                <EditText
                    android:id="@+id/leftIndexValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:text="@string/leftIndexValue"
                    android:editable="false"
                    android:textSize="35sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="Km" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rightIndex"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/rightIndex" />

                <EditText
                    android:id="@+id/rightIndexValue"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:editable="false"
                    android:text="@string/rightIndexValue"
                    android:textSize="35sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="Km" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            android:background="@drawable/primary_button"
            android:textColor="@color/white"
            android:text="Done"/>
    </LinearLayout>

</LinearLayout>